--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div>
-        <p>Привет. Сегодня первое практическое занятие</p>
+        <p>Привет, меня зовут ilya </p>
     </div>
 </body>
 </html>
